# python-project-template-cicd

./: .gitmodules  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/python_project_template_cicd/: __init__.py
tests/: test_basic.py
